--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,96 @@
 	Home page
 */
 
+* {
+	box-sizing: border-box;
+}
+
 body[page="index"] header ul{
 	list-style: none;
+}
+
+body main {
+	margin: 50px 0px 0px 0px;
+}
+
+
+/*
+	Shop page
+*/
+body[page="shop"] .area-for-sale {
+	display: flex;
+	justify-content: space-between;
+	align-content: center;
+	align-items: center;
+
+}
+
+body[page="shop"] .area-for-sale > div {
+	border: 2px solid rgb(239, 239, 239);
+	width: 48%;
+	position: relative;
+
+	display: flex;
+	justify-content: space-between;
+	align-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+
+	border-radius: 4px;
+}
+
+body[page="shop"] .area-for-sale #shop:before {
+	content: 'Shop';
+	position: absolute;
+	top: -22px;
+	left: 10px;
+}
+
+body[page="shop"] .area-for-sale #inventory:before {
+	content: 'Inventory';
+	position: absolute;
+	top: -22px;
+	left: 10px;
+}
+
+body[page="shop"] .slot {
+	display: block;
+	border: 1px solid #d6d6d6;
+	box-shadow: 0px 3px 5px -4px #000;
+	width: 80px;
+	height: 80px;
+	margin: 8px;
+	padding: 4px;
+
+	border-radius: 4px;
+	text-align: center;
+}
+
+body[page="shop"] .slot:hover {
+	box-shadow: 0px 4px 14px -5px #000;
+}
+
+body[page="shop"] .slot .item {
+	background-color: darkslategray;
+	color: #fff;
+	border-radius: 4px;
+	padding: 3px;
+	width: 70px;
+    height: 71px;
+
+	/* cursor: pointer; */
+}
+
+body[page="shop"] .slot .item span {
+	font-style: italic;
+	font-size: 10px;
+	display: block;
+}
+
+body[page="shop"] #shop .slot .item {
+	background-color: chartreuse;
+}
+
+.ui-draggable-dragging.special-draggable {
+	background-color: red !important;
 }
